Libreria jquery añadida

--- a/p14a.html
+++ b/p14a.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="../LIB/JQUERY/jquery-3.3.1.min.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
     <script src="main.js"></script>
     <title>Práctica: Interactúa con los eventos (I) - NVL-JQUERY-P14a </title>
 </head>
